--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,12 @@
+@import url(./__logo/header__logo.css);
+
 .header {
     width: 928px;
     height: 52px;
     background-color: greenyellow;
-    margin: auto;
+    margin: 28px auto 0;
     grid-area: header;
+    display: flex;
+    justify-content: space-between;
 
 }
