--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,8 @@
+@import url(./__title/intro__title.css);
+@import url(./__text/intro__text.css);
+@import url(./__list/intro__list.css);
+@import url(./__list-item/intro__list-item.css);
+
 .intro {
     width: 690px;
     height: 428px;
