--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,13 @@
+@import url(./__item/photo-grid__item.css);
+
 .photo-grid {
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 14px;
+    margin: auto;
     width: 928px;
     height: 942px;
     background-color: hotpink;
-    margin: auto;
     grid-area: photo-grid;
 }
