--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,8 +1,8 @@
 .cover__title {
     position: relative;
     z-index: 1;
-    margin: 195px auto 0;
-    max-width: 560px;
+    margin: 245px auto 0;
+    width: 560px;
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
