--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,12 +4,14 @@
 
 
 .cover {
+    text-decoration: none;
     position: relative;
     z-index: 0;
-    width: 1024px;
-    height: 640px;
-    background-color: lightblue;
-    margin: auto;
-    grid-area: cover;
-    background-image: url(/images/__background-cover.jpg);
+    width: 100%;
+    max-width: 1184px;
+    min-width: 320px;
+    height: 740px;
+    margin: 92px auto 0;
+    background: url(/images/__background-cover.jpg) no-repeat;
+    background-size: 100%;
 }
