--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,8 +3,5 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    width: 928px;
-    background-color: rebeccapurple;
-    margin: 0 auto 24px;
-    grid-area: footer;
+    margin: 92px 0 0;
 }
