--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,12 @@
 .header__logo {
-    max-width: 176px;
+    width: 176px;
+    height: 52px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__logo {
+        width: 142px;
+        height: 42px;
+    
+    }
 }
