--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,10 @@
 @import url(./__logo/header__logo.css);
+@import url(./__links/header__links.css);
+@import url(./__link/header__link.css);
+@import url(./__link-lang/header__link-lang.css);
 
 .header {
-    width: 928px;
-    height: 52px;
-    background-color: greenyellow;
-    margin: 28px auto 0;
-    grid-area: header;
+    
     display: flex;
     justify-content: space-between;
 
