--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,9 +4,8 @@
 @import url(./__list-item/intro__list-item.css);
 
 .intro {
-    width: 690px;
-    height: 428px;
-    background-color: gold;
-    margin-left: 48px;
-    grid-area: intro;
+    width: 100%;
+    max-width: 984px;
+    min-width: 320px;
+    margin: 92px auto 0;
 }
