--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,24 @@
 .lead__image {
     margin: 56px auto 0;
+    width: 100%;
+    max-width: 984px;
+    min-width: 768px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__image {
+        
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__image {
+
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__image {
+
+    }
 }
