--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,3 +9,11 @@
     color: #fff;
 
 }
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__title {
+        width: 288px;
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
