--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,9 +6,9 @@
 .lead {
     display: flex;
     flex-direction: column;
-    width: 928px;
-    height: 962px;
-    background-color: green;
-    margin: calc(56px - 92px) auto 0;
-    grid-area: lead;
+    width: 100%;
+    max-width: 984px;
+    min-width: 320px;
+    margin: 56px auto 0;
+    box-sizing: border-box;
 }
