--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,17 +1,24 @@
 .page {
-    width: 1024px;
+    width: 100%;
+    padding: 28px 48px 24px;
+    box-sizing: border-box;
+    min-width: 320px;
+    max-width: 1280px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     margin: auto;
-    display: grid;
-    grid-template-columns: 1024px;
-    grid-template-rows: repeat(7, auto);
-    grid-gap: 92px;
-    grid-template-areas: 
-    "header"
-    "lead"
-    "intro"
-    "photo-grid"
-    "places"
-    "cover"
-    "footer";
-    border: 2px solid red;
+    background: #2A2C2F;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .page {
+        padding: 28px 24px 24px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .page {
+        padding: 16px 16px 24px;
+    }
 }
