--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,3 +1,15 @@
 .photo-grid__item {
-    
+    width: 284px;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .photo-grid__item {
+        width: 300px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .photo-grid__item {
+        width: 352px;
+    }
 }
