--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,11 @@
     line-height: 58px;
     color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+    .intro__title {
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
