--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,4 +1,13 @@
 .header__links {
     display: flex;
+    align-items: flex-end;
+    height: min-content;
     padding: 0;
+    margin: calc(46px - 28px) 0 0;
+}
+
+@media screen and (max-width: 767px) {
+    .header__links {
+        margin: calc(30px - 16px) 0 0;
+    }
 }
