--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,4 +8,27 @@
     max-width: 984px;
     min-width: 320px;
     margin: 92px auto 0;
+    box-sizing: border-box;
 }
+
+@media screen and (max-width: 1279px) {
+    .intro {
+        max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .intro {
+        padding: 0 24px;
+        max-width: 100%;
+        margin: 88px auto 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .intro {
+        padding: 0 16px;
+        margin: 64px auto 0;
+    }
+}
+ 
