--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,5 +1,5 @@
 .lead__caption {
-    margin-top: 8px;
+    margin: 8px 0 0;
     width: 159px;
     font-family: Inter;
     font-style: normal;
@@ -9,4 +9,17 @@
     color: #fff;
     letter-spacing: 0.15em;
     text-transform: uppercase;
+}
+
+@media screen and (max-width: 1023px) {
+    .lead__caption {
+        padding: 0 0 0 24px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .lead__caption {
+        padding: 0 0 0 16px;
+    }
 }
