--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,23 +2,13 @@
     margin: 56px auto 0;
     width: 100%;
     max-width: 984px;
-    min-width: 768px;
+    min-width: 320px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+
+
+@media screen and (max-width: 768px) {
     .lead__image {
         
-    }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .lead__image {
-
-    }
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .lead__image {
-
     }
 }
