--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,29 @@
 .place__image {
     grid-area: place__image;
+    max-width: 460px;
+    max-height: 460px;
+}
+
+@media screen and (max-width: 1279px) {
+    .place__image {
+        max-width: 440px;
+        max-height: 440px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .place__image {
+        max-width: 340px;
+        max-height: 340px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__image {
+        width: 100%;
+        max-width: 340px;
+        max-height: 340px;
+        margin: 32px auto 0;
+        
+    }
 }
