--- a/blocks/place/__texts/place__texts.css
+++ b/blocks/place/__texts/place__texts.css
@@ -1,3 +1,13 @@
 .place__texts {
     grid-area: place__texts;
 }
+
+@media screen and (max-width: 767px) {
+    .place__texts {
+        width: 100%;
+        padding: 0 16px;
+        box-sizing: border-box;
+        margin-top: 32px;
+        
+    }
+}
