--- a/blocks/menu/__links/menu__links.css
+++ b/blocks/menu/__links/menu__links.css
@@ -3,3 +3,9 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 767px) {
+    .menu__links {
+        flex-direction: column;
+    }
+}
