--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -10,6 +10,6 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .photo-grid__item {
-        width: 352px;
+        width: 100%;
     }
 }
