--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
     .photo-grid {
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: repeat(3, 1fr);
@@ -18,18 +18,20 @@
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
     .photo-grid {
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 16px;
+        margin-top: 88px;
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .photo-grid {
         grid-template-rows: repeat(12, 1fr);
         grid-template-columns: 100%;
         grid-gap: 12px;
+        margin-top: 64px;
     }
 }
