--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,3 +9,20 @@
     line-height: 76px;
     color: #fff;
 }
+
+@media screen and (max-width: 1023px) {
+    .place__title {
+        font-weight: 900;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .place__title {
+        margin: 0 auto;
+        font-weight: 900;
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
