--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -10,3 +10,9 @@
     text-decoration: none;
     border-bottom: 1px solid #fff;
 }
+
+@media screen and (max-width: 767px) {
+    .place__website-link {
+        display: none;
+    }
+}
