--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -12,6 +12,6 @@
     min-width: 320px;
     height: 740px;
     margin: 92px auto 0;
-    background: url(/images/__background-cover.jpg) no-repeat;
+    background: url(../../images/__background-cover.jpg) no-repeat;
     background-size: 100%;
 }
