--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,8 +4,8 @@
     z-index: 1;
     left: 0;
     top: 0;
-    height: inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
     background-color: #2A2C2F;
     opacity: 0.3;
 }
