--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 2;
     max-width: 360px;
-    margin: 32px auto 0;
+    margin: 32px 0 0;
     text-align: center;
     font-family: Inter;
     font-style: normal;
@@ -10,4 +10,13 @@
     font-size: 18px;
     line-height: 22px;
     color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+    .cover__subtitle {
+        max-width: 288px;
+        margin-top: 16px;
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
