--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,7 @@
 .cover__title {
     position: relative;
     z-index: 2;
-    margin: 245px auto 0;
+    margin: 0;
     max-width: 560px;
     font-family: Inter;
     font-style: normal;
@@ -10,4 +10,28 @@
     line-height: 76px;
     text-align: center;
     color: #fff;
+    
+}
+
+@media screen and (max-width: 1279px) {
+    .cover__title {
+        
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .cover__title {
+        
+        font-size: 72px;
+        line-height: 76px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover__title {
+        max-width: 250px;
+        
+        font-size: 32px;
+        line-height: 35px;
+    }
 }
