--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,17 +1,27 @@
 @import url(./__overlay/cover__overlay.css);
+@import url(./__image/cover__image.css);
+@import url(./__text/cover__text.css);
 @import url(./__title/cover__title.css);
 @import url(./__subtitle/cover__subtitle.css);
+@import url(./__link/cover__link.css);
+
 
 
 .cover {
-    text-decoration: none;
     position: relative;
-    z-index: 0;
+    margin: 92px auto 0;
     width: 100%;
     max-width: 1184px;
-    min-width: 320px;
-    height: 740px;
-    margin: 92px auto 0;
-    background: url(../../images/__background-cover.jpg) no-repeat;
-    background-size: 100%;
+}
+
+@media screen and (max-width: 1023px) {
+    .cover {
+        margin-top: 88px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover {
+        margin-top: 64px;
+    }
 }
