--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,11 @@
     line-height: 16px;
     color: #fff;
 }
+
+@media screen and (max-width: 767px) {
+    .footer__copyright {
+        margin-top: 48px;
+        font-size: 14px;
+        line-height: 14px;
+    }
+}
