--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,11 +4,20 @@
     display: flex;
     justify-content: space-between;
     margin: 92px 0 0;
+    padding: 0 48px 24px;
+}
+
+@media screen and (max-width: 1023px) {
+    .footer {
+        margin-top: 88px;
+        padding: 0 0 24 24px;
+    }
 }
 
 @media screen and (max-width: 767px) {
     .footer {
         flex-direction: column;
+        margin-top: 64px;
         padding: 0 0 24px 16px;
     }
 }
