--- a/blocks/menu/__link-text/menu__link-text.css
+++ b/blocks/menu/__link-text/menu__link-text.css
@@ -8,3 +8,10 @@
     line-height: 18px;
     margin-right: 18px;
 }
+
+@media screen and (max-width: 767px) {
+    .menu__link-text {
+        font-size: 24px;
+        line-height: 24px;
+    }
+}
