--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -20,6 +20,8 @@
 
 @media screen and (max-width: 1023px) {
     .photo-grid {
+        padding: 0 24px;
+        width: 100%;
         grid-template-rows: repeat(6, 1fr);
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 16px;
@@ -29,6 +31,8 @@
 
 @media screen and (max-width: 767px) {
     .photo-grid {
+        padding: 0 16px;
+        width: 100%;
         grid-template-rows: repeat(12, 1fr);
         grid-template-columns: 100%;
         grid-gap: 12px;
