прописал всем текстам альтернативные шрифты

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,7 +4,7 @@
     max-width: 360px;
     margin: 32px 0 0;
     text-align: center;
-    font-family: Inter;
+    font-family: 'inter', 'arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
