--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     margin: 8px 0 0;
     width: 159px;
-    font-family: Inter;
+    font-family: 'inter', 'arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
