--- a/blocks/menu/__link-text/menu__link-text.css
+++ b/blocks/menu/__link-text/menu__link-text.css
@@ -1,7 +1,7 @@
 .menu__link-text {
     color: #fff;
     text-decoration: none;
-    font-family: Inter;
+    font-family: 'inter', 'arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
