--- a/blocks/place/__website-url-heading/place__website-url-heading.css
+++ b/blocks/place/__website-url-heading/place__website-url-heading.css
@@ -1,6 +1,6 @@
 .place__website-url-heading {
     margin: 0 0 12px;
-    font-family: Inter;
+    font-family: 'inter', 'arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
