--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
     width: 100%;
-    
+    padding: 0;
     min-width: 320px;
     max-width: 1280px;
     box-sizing: border-box;
@@ -8,5 +8,6 @@
     flex-direction: column;
     margin: auto;
     background: #2A2C2F;
+    overflow: hidden;
 }
 
