--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,7 @@
 .root {
+    padding: 0;
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
+    box-sizing: border-box;
     background: #2A2C2F;
 }
