--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,3 @@
-@import url(./__overlay/cover__overlay.css);
 @import url(./__image/cover__image.css);
 @import url(./__text/cover__text.css);
 @import url(./__title/cover__title.css);
@@ -12,6 +11,24 @@
     margin: 92px auto 0;
     width: 100%;
     max-width: 1184px;
+}
+
+.cover::after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #2A2C2F;
+    opacity: 0.3;
+}
+
+
+.cover:hover::after {
+    opacity: 0.8;
+    transition-duration: 0.4s;
 }
 
 @media screen and (max-width: 1023px) {
