--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -21,5 +21,6 @@
 @media screen and (max-width: 767px) {
     .lead__caption {
         padding: 0 0 0 16px;
+        max-width: max-content;
     }
 }
