--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,6 @@
 @import url(./__title/lead__title.css);
 @import url(./__subtitle/lead__subtitle.css);
+@import url(./__figure/lead__figure.css);
 @import url(./__image/lead__image.css);
 @import url(./__caption/lead__caption.css);
 
@@ -8,7 +9,6 @@
     flex-direction: column;
     width: 100%;
     max-width: 984px;
-    min-width: 320px;
     margin: 56px auto 0;
     box-sizing: border-box;
 }
