--- a/blocks/menu/__link-text/menu__link-text.css
+++ b/blocks/menu/__link-text/menu__link-text.css
@@ -1,17 +1,19 @@
 .menu__link-text {
-    color: #fff;
-    text-decoration: none;
-    font-family: 'inter', 'arial', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 18px;
-    margin-right: 18px;
+    list-style-type: none;
+    
 }
 
 @media screen and (max-width: 767px) {
     .menu__link-text {
-        font-size: 24px;
-        line-height: 24px;
+        margin-top: 32px;
     }
+
+    .menu__link-text:first-child {
+        margin: 0;
+    }
+}
+
+.menu__link-text:hover {
+    opacity: 0.8;
+    transition-duration: 0.2s;
 }
