--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -12,7 +12,6 @@
 
 @media screen and (max-width: 1023px) {
     .place__title {
-        font-weight: 900;
         font-size: 42px;
         line-height: 46px;
     }
@@ -20,8 +19,8 @@
 
 @media screen and (max-width: 767px) {
     .place__title {
-        margin: 0 auto;
-        font-weight: 900;
+        padding-left: 16px;
+        margin: 0;
         font-size: 32px;
         line-height: 35px;
     }
