--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,3 @@
-@import url(./__image/cover__image.css);
 @import url(./__text/cover__text.css);
 @import url(./__title/cover__title.css);
 @import url(./__subtitle/cover__subtitle.css);
@@ -8,8 +7,11 @@
 
 .cover {
     position: relative;
+    background-image: url(../../images/__background-cover.jpg);
+    background-size: 100% 100%;
     margin: 92px auto 0;
     width: 100%;
+    height: 740px;
     max-width: 1184px;
 }
 
@@ -31,14 +33,22 @@
     transition-duration: 0.4s;
 }
 
+@media screen and (max-width: 1280px) {
+    .cover {
+        height: 640px;
+    }
+}
+
 @media screen and (max-width: 1023px) {
     .cover {
         margin-top: 88px;
+        height: 480px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .cover {
         margin-top: 64px;
+        height: 200px;
     }
 }
