--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,7 +8,10 @@
 .cover {
     position: relative;
     background-image: url(../../images/__background-cover.jpg);
-    background-size: 100% 100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    
     margin: 92px auto 0;
     width: 100%;
     height: 740px;
