--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -38,12 +38,14 @@
 
 @media screen and (max-width: 1280px) {
     .cover {
+        max-width: 1024px;
         height: 640px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .cover {
+        max-width: 768px;
         margin-top: 88px;
         height: 480px;
     }
@@ -52,6 +54,7 @@
 @media screen and (max-width: 767px) {
     .cover {
         margin-top: 64px;
+        max-width: 320px;
         height: 200px;
     }
 }
