--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
