--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,25 +1,25 @@
 .cover__link {
     width: 100%;
-    min-height: 740px;
+    height: 740px;
     text-decoration: none;
 }
 @media screen and (max-width: 1280px) {
     .cover__link {
         max-width: 1024px;
-        min-height: 640px;
+        height: 640px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .cover__link {
         max-width: 768px;
-        min-height: 480px;
+        height: 480px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .cover__link {
         max-width: 320px;
-        min-height: 200px;
+        height: 200px;
     }
 }
