--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,25 +1,29 @@
 .cover__link {
     width: 100%;
-    height: 740px;
+    min-height: 740px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
 }
 @media screen and (max-width: 1280px) {
     .cover__link {
         max-width: 1024px;
-        height: 640px;
+        min-height: 640px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .cover__link {
         max-width: 768px;
-        height: 480px;
+        min-height: 480px;
     }
 }
 
 @media screen and (max-width: 767px) {
     .cover__link {
         max-width: 320px;
-        height: 200px;
+        min-height: 200px;
     }
 }
