--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,4 @@
-@import url(./__text/cover__text.css);
+
 @import url(./__title/cover__title.css);
 @import url(./__subtitle/cover__subtitle.css);
 @import url(./__link/cover__link.css);
@@ -6,6 +6,7 @@
 
 
 .cover {
+    display: block;
     position: relative;
     background-image: url(../../images/__background-cover.jpg);
     background-size: cover;
